# TouchController

./: .buildifier.json  .buildifier.tables.json  .gitattributes  .gitignore  BUILD.bazel  README.md  maven_install.json  modrinth_lock.json  neoforge_pin.txt
combine/backend/minecraft/: BUILD.bazel
combine/backend/minecraft/fabric/: BUILD.bazel
combine/backend/minecraft/neoforge/: BUILD.bazel
combine/backend/minecraft/versions/: BUILD.bazel
combine/example/hello_world/common/: BUILD.bazel  HelloWorld.kt
combine/example/widget_factory/: BUILD.bazel  WidgetFactoryMod.kt
combine/example/widget_factory/common/: BUILD.bazel  WidgetFactory.kt
combine/example/widget_factory/resources/: fabric.mod.json
combine/theme/oreui/: BUILD.bazel  OreUITheme.kt
game/26.1/: BUILD.bazel
game/26.2/: BUILD.bazel  maven_install_fabric.json
module/: fabric.MODULE.bazel  minecraft.MODULE.bazel  neoforge.MODULE.bazel  rules.MODULE.bazel
rule/access_widener_extractor/: AccessWidenerExtractor.kt  BUILD.bazel
rule/fabric/jij_merger/: BUILD.bazel  JarInJarMerger.kt
rule/mergetool/: BUILD.bazel  MergeTool.java
rule/mergetool/api/: AttributeEnvironment.java  ContextAttributeKey.java  Plugin.java  PluginProvider.java  PreprocessEnvironment.java
rule/mergetool/impl/: PreprocessEnvironmentImpl.java
rule/mergetool/plugin/expect_actual/: AspectProviderImplEntry.java  ExpectActualPlugin.java  ExpectActualPluginProvider.java
rule/mergetool/plugin/fabric_jij/: BUILD.bazel  FabricJijPlugin.java  FabricJijPluginProvider.java
rule/mergetool/plugin/jar_in_jar/: BUILD.bazel  JarInJarPlugin.java  JarInJarPluginProvider.java
rule/mergetool/plugin/manifest/: ManifestPlugin.java  ManifestPluginProvider.java
rule/mergetool/plugin/neoforge_jij/: BUILD.bazel  NeoforgeJijPlugin.java  NeoforgeJijPluginProvider.java
rule/mergetool/plugin/resource/: ResourcePlugin.java  ResourcePluginProvider.java
rule/mergetool/plugin/services/: ServicesPlugin.java  ServicesPluginProvider.java
rule/mergetool/plugin/unified_jar/: UnifiedJarManifestPlugin.java  UnifiedJarManifestPluginProvider.java
rule/text_transformer/: BUILD.bazel  TextTransformer.java
rule/token_helper/: BUILD.bazel  ModrinthTokenSaver.java  TokenBackend.java
touchcontroller/api/: BUILD.bazel
touchcontroller/api/example/: BUILD.bazel  TouchControllerApiExample.java
touchcontroller/api/example/resources/: fabric.mod.json
touchcontroller/api/v1/widget/: BuiltInWidgetBuilder.java  TopBarWidgetBuilder.java
touchcontroller/common/: BUILD.bazel
touchcontroller/common/about/: AboutInfo.kt  Libs.kt
touchcontroller/common/about/resources/: ResourcesAboutInfoProvider.kt
touchcontroller/common/annotations/: DontTranslate.kt
touchcontroller/common/api/: BUILD.bazel  TouchControllerApiImpl.kt
touchcontroller/common/api/text/: ApiText.kt  ApiTextFactory.kt  BUILD.bazel
touchcontroller/common/api/texture/: ApiBuiltInWidgetTextureProvider.kt  ApiWidgetTextureBuilder.kt
touchcontroller/common/api/widget/: ApiBuiltInWidgetBuilder.kt  BUILD.bazel
touchcontroller/common/config/: BUILD.bazel  ItemConfig.kt
touchcontroller/common/config/condition/: BUILD.bazel  LayerConditions.kt
touchcontroller/common/config/data/: ChatConfig.kt  ControlConfig.kt  DebugConfig.kt  RegularConfig.kt  StatusConfig.kt  TouchRingConfig.kt
touchcontroller/common/config/holder/: BUILD.bazel  GlobalConfigHolder.kt
touchcontroller/common/config/layout/: BUILD.bazel
touchcontroller/common/config/platform/: PlatformConfigProvider.kt
touchcontroller/common/config/preset/: BUILD.bazel  PresetManager.kt  PresetsContainer.kt
touchcontroller/common/config/widget/: WidgetPresetManager.kt
touchcontroller/common/control/: BUILD.bazel  ConfigProperties.kt  ControllerWidget.kt
touchcontroller/common/control/action/: BUILD.bazel  GameActionInstanceImpl.kt  GameActions.kt  PlayerActionInstanceImpl.kt  PlayerActions.kt  WidgetTriggerAction.kt
touchcontroller/common/control/builtin/: BUILD.bazel  BuiltinWidgets.kt
touchcontroller/common/control/property/: BUILD.bazel  TextureCoordinate.kt
touchcontroller/common/control/serializer/: BUILD.bazel
touchcontroller/common/event/connection/: ConnectionEvents.kt
touchcontroller/common/event/key/: KeyEvents.kt
touchcontroller/common/event/render/: BUILD.bazel  RenderEvents.kt
touchcontroller/common/gal/: BUILD.bazel
touchcontroller/common/gal/action/: GameAction.kt
touchcontroller/common/gal/feature/: EntityFeatures.kt
touchcontroller/common/gal/itemlist/: DefaultItemListProvider.kt
touchcontroller/common/gal/key/: BUILD.bazel  KeyBindingHandler.kt
touchcontroller/common/gal/paint/: CrosshairRenderer.kt
touchcontroller/common/gal/window/: WindowHandle.kt
touchcontroller/common/layout/: BUILD.bazel
touchcontroller/common/layout/click/: BUILD.bazel  DoubleClickCounter.kt  DoubleClickState.kt
touchcontroller/common/layout/config/: BUILD.bazel
touchcontroller/common/layout/data/: BUILD.bazel  ContextResult.kt  ContextStatus.kt  ContextTimer.kt  CrosshairStatus.kt  DPadDirection.kt  InventoryResult.kt  InventorySlotStatus.kt
touchcontroller/common/layout/queue/: DrawQueue.kt
touchcontroller/common/layout/widget/: BUILD.bazel  Texture.kt
touchcontroller/common/model/: BUILD.bazel  ControllerHudModel.kt  TouchStateModel.kt
touchcontroller/common/platform/: LargeMessageWrappedPlatform.kt
touchcontroller/common/platform/android/: AndroidPlatform.kt
touchcontroller/common/platform/blazesdl/: BlazeSDLPlatform.kt
touchcontroller/common/platform/ios/: IosPlatform.kt  Transport.kt
touchcontroller/common/serializer/: ItemSerializer.kt
touchcontroller/common/state/: BUILD.bazel
touchcontroller/common/ui/: BUILD.bazel
touchcontroller/fabric/: BUILD.bazel
touchcontroller/fabric/resources/: fabric.mod.json
touchcontroller/neoforge/: BUILD.bazel
touchcontroller/neoforge/resources/: neoforge.mods.toml
touchcontroller/resources/lang/: BUILD.bazel  en_us.json  ru_ru.json  uk_ua.json  zh_cn.json  zh_tw.json
touchcontroller/resources/texture/: BUILD.bazel
(+933 files in other folders)
