"MODULE.bazel NeoForge part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "net.neoforged:srgutils:1.0.10",
        "io.codechicken:DiffPatch:2.1.0.42:all",
        "net.neoforged.jst:jst-cli-bundle:2.0.7",
        "net.minecraftforge:mergetool:1.1.7:fatjar",
    ],
)

lexforge_versions = {
    "1.14.4": {
        "java_target": 8,
        "mapping": False,
        "sas": True,
        "mcp_version": "1.14.4-20190829.143755",
        "mcp_sha256": "49d0b7818ccf385a57feda19fbd88b1fb4bd97c95d98e7044d9cb4c735e37820",
        "forge_version": "1.14.4-28.2.26",
        "forge_userdev_sha256": "572c52438fd9160f315e60122a45e25574c0bc48d9855eddd26c3da96fe0d3fb",
        "forge_sources_sha256": "0d3b2a366e55a08f2088c6742646b485f767d87e085d98eacde1c00da061251f",
        "forge_universal_sha256": "3552443b6a3f36dee6a18c885355f9b4e1b2fc5bbd840a87f4e494809bf88a8e",
    },
    "1.15.2": {
        "java_target": 8,
        "mapping": False,
        "sas": True,
        "mcp_version": "1.15.2-20200515.085601",
        "mcp_sha256": "17a1898f6a91ae61cc9a044fbec19e33f49b8a02e37e624fa762de156422a665",
        "forge_version": "1.15.2-31.2.57",
        "forge_userdev_sha256": "bfef6d74e733a0c9ec694857b962374ad3773eadf28d66a0247d2c5e0f9bb7a9",
        "forge_sources_sha256": "b7b83f46f3dc0aaa5b61764a863a94fe917e5b016dc83b5607fee70512b1b107",
        "forge_universal_sha256": "415329285fca582800582f5e40d807ea6d3ba14f5d7fa7d8595f35b79b2e8c79",
    },
    "1.16.5": {
        "java_target": 8,
        "mapping": False,
        "sas": True,
        "mcp_version": "1.16.5-20210115.111550",
        "mcp_sha256": "80216a0f4ae79d81a5e11ceccaa97582a1f6a2cf079b7703b88a99a26547b342",
        "forge_version": "1.16.5-36.2.34",
        "forge_userdev_sha256": "7fdf58513f2cff7a5c3007e0dd0ee36fb4dc40a0c68c18f86d9799b0ea382c1f",
        "forge_sources_sha256": "a1c8999617d792843c879c04e49f8658c299e5a423b4f44468f8f70961a68104",
        "forge_universal_sha256": "56d2b1501c74638f07162904e61b6bdd5312f27a3ad1f1f72d40b3818ce08ed7",
    },
    "1.17.1": {
        "java_target": 16,
        "mcp_version": "1.17.1-20210706.113038",
        "mcp_sha256": "507f59441ccdba03c526f5484cd40559cf958340c0d8b7c0d6a0dfc37f511413",
        "forge_version": "1.17.1-37.1.1",
        "forge_userdev_sha256": "ab630a994b26e5a7938b5700da7a79aa0e8cb933c101d026feb9a355014bfe0c",
        "forge_sources_sha256": "58a7ed4c531ac8965bcded899116821e19ac02ec1aabec8942f5fe5aef9da6b8",
        "forge_universal_sha256": "2cc032ae95d60f03e62be4929f3ecd66354e6ed135fa3cf676ced2b2f7910a6d",
        "strip_deny_patterns": [
            "com/mojang/(authlib|bridge|brigadier|datafixers|serialization|util)/.*",
            "com/google/.*",
            "joptsimple/.*",
            "com/sun/.*",
            "oshi/.*",
            "io/.*",
            "it/.*",
            "javax/.*",
            "org/.*",
        ],
    },
    "1.18.1": {
        "java_target": 17,
        "mcp_version": "1.18.1-20211210.034407",
        "mcp_sha256": "891fd00d1ba9c762d8bcd3a82a65f81d5e9c3a29366d0e31caa9eec4ed3541cb",
        "forge_version": "1.18.1-39.1.0",
        "forge_userdev_sha256": "064bec1d79263c1b20e17af325cd38d18dd9d5876fc52a328d909c86282ad180",
        "forge_sources_sha256": "0e24113caf166aed3d85b9de42716b9c49f848fffcd67013ce8c02717c936c1e",
        "forge_universal_sha256": "c9f1f4ff54a291bf0f52331bebc0609828a8aad91092e6115b29483855d486c4",
    },
    "1.18.2": {
        "java_target": 17,
        "mcp_version": "1.18.2-20220404.173914",
        "mcp_sha256": "f60527297dd4e81e3da93dc95981e426a81d3b03457cf2f94af8281e2db5a8f2",
        "forge_version": "1.18.2-40.3.0",
        "forge_userdev_sha256": "6bb791a22476810fd4d7e63dafa4ec0c41a916a62f35b727498bee68c33c3aec",
        "forge_sources_sha256": "9dfd638392a92034c72750aa91aba431e226f90d12b2cb2a30beaee761bd8941",
        "forge_universal_sha256": "593a438cd5bb93c6165a969d9a508a77d37ef22855ee8fa7c17c8a1a2ee84697",
    },
    "1.19.2": {
        "java_target": 17,
        "mcp_version": "1.19.2-20220805.130853",
        "mcp_sha256": "fd4cf084b96492de87499b49d1ae5896ef14a3f85b5462d2842d7b193fba9135",
        "forge_version": "1.19.2-43.5.0",
        "forge_userdev_sha256": "89b19584bab2300a7097bfada757802433ae963b8cbe5b9fa4776ba7cf648c40",
        "forge_sources_sha256": "fb39de147fcc38b13189863434f0ec4122d169ab53b30c3f752290545b2d581b",
        "forge_universal_sha256": "a414bf748159d4793cfc7f4bc7f7f1458024f65ca84236dc9e7d43a289251f75",
    },
    "1.20.1": {
        "java_target": 17,
        "mcp_version": "1.20.1-20230612.114412",
        "mcp_sha256": "f46d1050d8bed9046886b90a0d2fb80b4c6b5120fc35d32e5d37498dbe0a6d2a",
        "forge_version": "1.20.1-47.4.10",
        "forge_userdev_sha256": "c3461735feaa3553701cf9234e41e0d9ff92691e75106e4cb56d945c71440614",
        "forge_sources_sha256": "918a11bdfceace2752d4c29bddbdf327981e1f6a1e1f0675f23e5fbf01e226c0",
        "forge_universal_sha256": "bb2f67fc423f09c30ac3d83ab629fa5cc6743a0ce1c2febae46602530f17c8f1",
    },
}

neoforge_versions = {
    "1.20.4": {
        "java_target": 17,
        "neoform_version": "1.20.4-20240627.114801",
        "neoform_sha256": "31798da3449d3e296a0761b0a05bbbca1a9d85eaf55302e9a258f6cce7e38fe6",
        "neoforge_version": "20.4.251",
        "neoforge_userdev_sha256": "405cbfd509d283aeb58b224691844ef735f737c3a71d0ff1a38ff1773d39650f",
        "neoforge_sources_sha256": "198df8b25fa20c988459d127ca1f6d3b0c464620009dea2f96a953d22da80612",
        "neoforge_universal_sha256": "54accb2e09fd75590e5896fcde24b3b7f0068d35fd4bc2437f619988fec649d7",
    },
    "1.20.6": {
        "java_target": 21,
        "neoform_version": "1.20.6-20240627.102356",
        "neoform_sha256": "fc03b4e32b879a109ec78abeebb002df4231cff03fab4f0bffeb03c63cbb590c",
        "neoforge_version": "20.6.139",
        "neoforge_userdev_sha256": "fbc6bdfb3328e2d4f68dfae8ee57e31211fab81e4ca55078ab85d272dfb67bc4",
        "neoforge_sources_sha256": "73e1367eae1b7ec6e8d58bdca4f70906d906d427d536070b2a27756fca13db7f",
        "neoforge_universal_sha256": "2214ce9640ff694de7f0c8c9eb354439003ae69e33bc7c80139ffd324c5b8a04",
    },
    "1.21": {
        "java_target": 21,
        "neoform_version": "1.21-20240613.152323",
        "neoform_sha256": "33bbf6d5dc922c081521b745d73f262a5738f7c6ff7c1e98b4ceef9068398857",
        "neoforge_version": "21.0.167",
        "neoforge_userdev_sha256": "12d1d7536c33a20ab8cd115f23d39842c18206de556cbb15145e3b0ad83ee9bb",
        "neoforge_sources_sha256": "b5beeac99bf131dd309aaa46e24635bf049618feaff90e5cb83863ce2cf40f6a",
        "neoforge_universal_sha256": "9c68c9c2c8bb8314fde3f1a3cf890ff4ab74b804561ae6998a4b9308397725a5",
    },
    "1.21.1": {
        "java_target": 21,
        "neoform_version": "1.21.1-20240808.144430",
        "neoform_sha256": "3fcdf0f0d115774cfceaf206a05a6dc964e2189bfd00f5b5f863e37f4b7733c7",
        "neoforge_version": "21.1.218",
        "neoforge_userdev_sha256": "08610e4b6a65b5049e52704b4c0182133bc54dd94514ec49c680120801a6aa0d",
        "neoforge_sources_sha256": "0585399bfe575190f38ce57d33f6e4898384412aacb148c5e59f30c58b7cd783",
        "neoforge_universal_sha256": "0a7e482f83762b79d42aa0a907f82413b70b178c69237c88c505436b2913fcf2",
    },
    "1.21.3": {
        "java_target": 21,
        "neoform_version": "1.21.3-20241023.131943",
        "neoform_sha256": "514bfe9d6c7105c90e3fe460833471a4efff09577b9e8b4c4d44a90ad5ca0907",
        "neoforge_version": "21.3.91",
        "neoforge_userdev_sha256": "6a65c90884bf829b8b03f1f72383a01b3abba25e7a4f3d09abda5c7b92dcc158",
        "neoforge_sources_sha256": "bcf6000577e3452768529be3bb247894998518cacfa344a9f4e6b05edf96e12d",
        "neoforge_universal_sha256": "d7b9add03e134e0c44e220bcbeb1f2b50642e250350f1d858e4584d7ee0cf9e0",
    },
    "1.21.4": {
        "java_target": 21,
        "neoform_version": "1.21.4-20241203.161809",
        "neoform_sha256": "225224de97079060c9924afca4dddd55a15217c00d7e194b4e1348131b02f8b9",
        "neoforge_version": "21.4.148",
        "neoforge_userdev_sha256": "538c401fa062ab3b0ed5e06c125f9009f23fa5585eb728f9c3a2f55e4ddd0674",
        "neoforge_sources_sha256": "d7ec5488c77056aa70fb13546675e00c92d3232e486dc6ac224e3e1f730fbfbb",
        "neoforge_universal_sha256": "cb6b62a7aa28a0bd35dc896f8c3887e946c16c7109042d8e6082df076926e895",
    },
    "1.21.5": {
        "java_target": 21,
        "neoform_version": "1.21.5-20250325.162830",
        "neoform_sha256": "29f268a2287e90a68756c7f31f31afa73e8ff68d886741a9e1e9b5e8c4b6f897",
        "neoforge_version": "21.5.95",
        "neoforge_userdev_sha256": "1e5888723c757f36584186df84e231904866ffd16ec8c74680289c0a5fc9ffb6",
        "neoforge_sources_sha256": "ff9d28d640cfcd7f896dd44e4e7d132cdbbf7305ce44117d4aadecbb2c9172a7",
        "neoforge_universal_sha256": "be89e5fc27235ebe3ed25312290d9900a67ea5f2d9edc8f1008c55c8ee3ecdb8",
    },
    "1.21.6": {
        "java_target": 21,
        "neoform_version": "1.21.6-20250617.151856",
        "neoform_sha256": "f537eca06638ed23796d094ab9315c6660ebb142b067c791d68bf4e6469df32a",
        "neoforge_version": "21.6.20-beta",
        "neoforge_userdev_sha256": "646bf46e7cdbd20dc91d7ba5e181270bbe44b9e1571edf3ff3a85573e98f594f",
        "neoforge_sources_sha256": "9df12009da9c8fcba87667aa906d88cacd809f37a7d391c58d08c2921bb9cf51",
        "neoforge_universal_sha256": "250dfe6b489b32c388427bb37a9883d06d679d26e71986055bbd0a5d26047b63",
    },
    "1.21.7": {
        "java_target": 21,
        "neoform_version": "1.21.7-20250711.194848",
        "neoform_sha256": "d37b1aec163eb989f0c08fdd7f2a13a4ae4100102ea1d51ed18b21d69076d481",
        "neoforge_version": "21.7.25-beta",
        "neoforge_userdev_sha256": "10b4970427d9a3f080469c4b5e63fffad3b58339dd54ca43662e4bcce9335637",
        "neoforge_sources_sha256": "a15431b6cdcd5305833757c0fb14f3df9d35768c455add88a18f068a72efcc3c",
        "neoforge_universal_sha256": "44935718e180f5ef2dfcc79a8628a9b506cdd1b99e9fbab96cf0ce641609df65",
    },
    "1.21.8": {
        "java_target": 21,
        "neoform_version": "1.21.8-20250717.133445",
        "neoform_sha256": "d67401bd0769ee045128fb84142fb660fe49db8ea86538d4dc308c25cd0cdbca",
        "neoforge_version": "21.8.53",
        "neoforge_userdev_sha256": "1a429e52aa460f58ff99a3bad6e63080723286bcd65ce93b49e1bf6a2e73e1ce",
        "neoforge_sources_sha256": "67521895b57a16f31c577f41061ab3842183c3cd07595a5f08f6ebb062a2467f",
        "neoforge_universal_sha256": "e1b4de88495ad793be4a90afaa0e051937557d288b93f3a70ccb6e2ffaf45f20",
    },
    "1.21.9": {
        "java_target": 21,
        "neoform_version": "1.21.9-20250930.151910",
        "neoform_sha256": "36ea1a00d8bc168a9359ee2a8799d797cd9c62512d6e873a0ed3709ae6d14085",
        "neoforge_version": "21.9.16-beta",
        "neoforge_userdev_sha256": "6cf0698ef09fdf96fd33e413dc5a147bfc2a73c1b49ef2553cc5607edde25695",
        "neoforge_sources_sha256": "4c08ad08adcc08aea8cccfba26f36e64efcc4ffe4e3a690aac7a51ba7f305fb3",
        "neoforge_universal_sha256": "7e74d4b2016bd10fd9b1ddd53695acf6f271e1c9c1e9923afb59cf69ebb06051",
    },
    "1.21.10": {
        "java_target": 21,
        "neoform_version": "1.21.10-20251010.172816",
        "neoform_sha256": "445940ac070d37ec4294d5392de0485bfd2b9245580f7a7b6d8e774d7306de84",
        "neoforge_version": "21.10.64",
        "neoforge_userdev_sha256": "5ef969c95fb13fecbbf43641565cd871c6d92436cf7c28baa480219b26e7364c",
        "neoforge_sources_sha256": "d52d822668b8cb1bfcf2e75c31eacc90b1935e1865d3aa0e720eed9c1b4e49b9",
        "neoforge_universal_sha256": "51dc4f8418cc0c067df2524bc220edef56097f475f60527d550992bed90a2b57",
    },
    "1.21.11": {
        "java_target": 21,
        "neoform_version": "1.21.11-20251209.172050",
        "neoform_sha256": "f3f65e0aa4926c3c3e9c60834d6e028d15f4815b33a0cb1ef63f524ba5d307ed",
        "neoforge_version": "21.11.42",
        "neoforge_userdev_sha256": "2bf1f4a62c7245dc18c7ecffd56dd5b1224f2a5bf9099eae1fdd96c7c68f70e9",
        "neoforge_sources_sha256": "eb96678adb747d7792d3c5de509fe81d37a771019ccef04011146399d8801112",
        "neoforge_universal_sha256": "0bba6d7cedc69ab53a308aacc8acd270e0739a9ce7341aed5185dc3480ca2673",
    },
    "26.1": {
        "java_target": 25,
        "version": "26.1",
        "mapping": False,
        "neoform_version": "26.1-1",
        "neoform_sha256": "66dfce58e1d06d221317b33586a45e9394a40615af677d498244434597f7e80f",
        "neoforge_version": "26.1.0.19-beta",
        "neoforge_userdev_sha256": "8b360d0ba8a250cf000a50d652f167b779f79dcf7f84cbec27e129f14e70d04c",
        "neoforge_sources_sha256": "cbda7af642507ef84f6225d5a4481af581f13584f71abef603784c02e2f261e7",
        "neoforge_universal_sha256": "cd57bc3ce419023996b0ead6869a6f681810fde802d17efbcb26b9b689362ae6",
    },
    "26.1.1": {
        "java_target": 25,
        "version": "26.1.1",
        "mapping": False,
        "neoform_version": "26.1.1-1",
        "neoform_sha256": "c89f910127a0fa99d4e658c2cbc493c8861eea8b10c06cecce15cb45a86dce4b",
        "neoforge_version": "26.1.1.15-beta",
        "neoforge_userdev_sha256": "bd064ca729a4f78bc1393bf1ba4a698b2def0551bca485e0285292c3113218b6",
        "neoforge_sources_sha256": "f654f723c04f046eea2ba3000a50df85dc5492f52fefe30665df408c435c2da3",
        "neoforge_universal_sha256": "27b547078f4cd15fac189bb048931d435f37fd7563126a3fcbe910ad308e4c73",
    },
    "26.1.2": {
        "java_target": 25,
        "version": "26.1.2",
        "mapping": False,
        "neoform_version": "26.1.2-1",
        "neoform_sha256": "3eb9f8cc282badfbc210a27a8304f14cc58fa40401a94072874dfaded3c8cb52",
        "neoforge_version": "26.1.2.59-beta",
        "neoforge_userdev_sha256": "97f8c2dbcb201f0e87300a451917259537452158fb8c31139f1cd75cafb8db9f",
        "neoforge_sources_sha256": "573ada67441843d8692aed189754caa2219831381d9f4cf8fd2fb43e6069467e",
        "neoforge_universal_sha256": "bc180685cce45262007aa8ca561fa58e89f695bf31a6a7fc284305806a88f1da",
    },
}

neoform = use_extension("//repo:neoform.bzl", "neoform")

neoforge = use_extension("//repo:neoforge.bzl", "neoforge")

[
    (
        neoform.version(
            client_jar = "@minecraft//%s:client" % (data["version"] if "version" in data else version),
            client_libraries = "@minecraft//%s:client_libraries" % (data["version"] if "version" in data else version),
            client_mapping = "@minecraft//%s:client_mappings" % (data["version"] if "version" in data else version),
            legacy = True,
            sas_data = ("@forge_%s//:sas" % version.replace(".", "_")) if data.get("sas", False) else None,
            server_jar = "@minecraft//%s:server" % (data["version"] if "version" in data else version),
            server_mapping = "@minecraft//%s:server_mappings" % (data["version"] if "version" in data else version),
            sha256 = data["mcp_sha256"],
            strip_deny_patterns = data.get("strip_deny_patterns", []),
            version = data["mcp_version"],
        ) if data.get("mapping", True) else neoform.version(
            client_jar = "@minecraft//%s:client" % (data["version"] if "version" in data else version),
            client_libraries = "@minecraft//%s:client_libraries" % (data["version"] if "version" in data else version),
            legacy = True,
            sas_data = ("@forge_%s//:sas" % version.replace(".", "_")) if data.get("sas", False) else None,
            server_jar = "@minecraft//%s:server" % (data["version"] if "version" in data else version),
            sha256 = data["mcp_sha256"],
            strip_deny_patterns = data.get("strip_deny_patterns", []),
            version = data["mcp_version"],
        ),
        use_repo(
            neoform,
            **{
                ("mcp_%s" % version.replace(".", "_")): ("mcp_%s" % data["mcp_version"].replace(".", "_").replace("-", "_")),
            }
        ),
        neoforge.version(
            java_target = data["java_target"],
            joined_patched_sources = "@mcp_%s//tasks/joined_patch" % version.replace(".", "_"),
            joined_strip_client = "@mcp_%s//tasks/joined_strip_client" % version.replace(".", "_") if data.get("mapping", True) else None,
            legacy = True,
            sources_sha256 = data["forge_sources_sha256"],
            universal_sha256 = data["forge_universal_sha256"],
            userdev_sha256 = data["forge_userdev_sha256"],
            version = data["forge_version"],
        ),
        use_repo(
            neoforge,
            **{
                ("forge_%s" % version.replace(".", "_")): ("forge_%s" % data["forge_version"].replace(".", "_").replace("-", "_")),
            }
        ),
    )
    for version, data in lexforge_versions.items()
]

[
    (
        neoform.version(
            client_jar = "@minecraft//%s:client" % (data["version"] if "version" in data else version),
            client_libraries = "@minecraft//%s:client_libraries" % (data["version"] if "version" in data else version),
            client_mapping = "@minecraft//%s:client_mappings" % (data["version"] if "version" in data else version),
            server_jar = "@minecraft//%s:server" % (data["version"] if "version" in data else version),
            server_mapping = "@minecraft//%s:server_mappings" % (data["version"] if "version" in data else version),
            sha256 = data["neoform_sha256"],
            version = data["neoform_version"],
        ) if data.get("mapping", True) else neoform.version(
            client_jar = "@minecraft//%s:client" % (data["version"] if "version" in data else version),
            client_libraries = "@minecraft//%s:client_libraries" % (data["version"] if "version" in data else version),
            server_jar = "@minecraft//%s:server" % (data["version"] if "version" in data else version),
            sha256 = data["neoform_sha256"],
            version = data["neoform_version"],
        ),
        use_repo(
            neoform,
            **{
                ("neoform_%s" % version.replace(".", "_")): ("neoform_%s" % data["neoform_version"].replace(".", "_").replace("-", "_")),
            }
        ),
        neoforge.version(
            java_target = data["java_target"],
            joined_patched_sources = "@neoform_%s//tasks/joined_patch" % version.replace(".", "_"),
            joined_strip_client = "@neoform_%s//tasks/joined_strip_client" % version.replace(".", "_") if "mapping" not in data else None,
            sources_sha256 = data["neoforge_sources_sha256"],
            universal_sha256 = data["neoforge_universal_sha256"],
            userdev_sha256 = data["neoforge_userdev_sha256"],
            version = data["neoforge_version"],
        ),
        use_repo(
            neoforge,
            **{
                ("neoforge_%s" % version.replace(".", "_")): ("neoforge_%s" % data["neoforge_version"].replace(".", "_").replace("-", "_").replace("+", "_")),
            }
        ),
    )
    for version, data in neoforge_versions.items()
]

neoform.pin(pin_file = "//:neoform_pin.txt")

use_repo(neoforge, "neoforge_pin")

neoforge.pin(pin_file = "//:neoforge_pin.txt")

use_repo(neoform, "neoform_pin")
