load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//26.1:client",
    client_assets = "@minecraft_assets//:assets_26.1",
    client_assets_version = "@minecraft_assets//:version_26.1",
    client_libraries = "@minecraft//26.1:client_libraries",
    kotlinforforge = "@kotlinforforge_neoforge_26_1//:primary",
    neoforge = "@neoforge_26_1//:neoforge",
    server = "@minecraft//26.1:server",
    version = "26.1",
    visibility = ["//visibility:public"],
)
