load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "access_widener_extractor_library",
    srcs = glob(["*.kt"]),
    deps = [
        "//:kotlin_serialization",
        "//rule/worker_api",
        "@maven//:net_fabricmc_class_tweaker",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json_jvm",
    ],
)

java_binary(
    name = "access_widener_extractor",
    main_class = "top.fifthlight.fabazel.accesswidenerextractor.AccessWidenerExtractorKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":access_widener_extractor_library"],
)
