load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("//rule:jar.bzl", "jar")

java_library(
    name = "mergetool",
    srcs = glob(["*.java"]),
    deps = [
        "//rule/mergetool/api",
        "//rule/mergetool/impl",
        "//rule/worker_api",
        "@maven//:org_jspecify_jspecify",
    ],
)

java_binary(
    name = "merger",
    jvm_flags = ["-Duser.timezone=UTC"],
    main_class = "top.fifthlight.mergetools.merger.MergeToolWorker",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":mergetool",
        "//rule/mergetool/plugin/expect_actual",
        "//rule/mergetool/plugin/fabric_jij",
        "//rule/mergetool/plugin/jar_in_jar",
        "//rule/mergetool/plugin/manifest",
        "//rule/mergetool/plugin/neoforge_jij",
        "//rule/mergetool/plugin/resource",
        "//rule/mergetool/plugin/services",
        "//rule/mergetool/plugin/unified_jar",
    ],
)

jar(
    name = "empty_jar",
    visibility = ["//visibility:public"],
)
