load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "token_helper",
    srcs = [
        "TokenBackend.java",
    ],
    visibility = ["//rule:__subpackages__"],
    deps = [
        "//rule/token_helper/wincred",
        "@maven//:de_swiesend_secret_service",
        "@maven//:org_merlyn_oss_jkeychain",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "token_saver",
    srcs = [
        "ModrinthTokenSaver.java",
    ],
    main_class = "top.fifthlight.fabazel.tokenhelper.ModrinthTokenSaver",
    deps = [
        ":token_helper",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
