load("//rule:merge_library.bzl", "merge_library_group")

merge_library_group(
    name = "common_runtime_deps",
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//touchcontroller/common/config/preset/builtin",
        "//touchcontroller/common/control/serializer",
        "//touchcontroller/common/ui/chat/screen",
        "//touchcontroller/common/ui/config/tab/layout/provider:provider_impl",
    ],
)
