load("//rule:merge_library.bzl", "merge_library_group")

merge_library_group(
    name = "common",
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//touchcontroller/buildinfo",
        "//touchcontroller/common/about",
        "//touchcontroller/common/about/resources",
        "//touchcontroller/common/annotations",
        "//touchcontroller/common/api",
        "//touchcontroller/common/api/text",
        "//touchcontroller/common/api/texture",
        "//touchcontroller/common/assets",
        "//touchcontroller/common/config:config_group",
        "//touchcontroller/common/control:control_group",
        "//touchcontroller/common/event/block",
        "//touchcontroller/common/event/connection",
        "//touchcontroller/common/event/key",
        "//touchcontroller/common/event/render",
        "//touchcontroller/common/event/tick",
        "//touchcontroller/common/event/window",
        "//touchcontroller/common/gal",
        "//touchcontroller/common/input",
        "//touchcontroller/common/layout",
        "//touchcontroller/common/layout/align",
        "//touchcontroller/common/layout/click",
        "//touchcontroller/common/layout/config",
        "//touchcontroller/common/layout/data",
        "//touchcontroller/common/layout/queue",
        "//touchcontroller/common/layout/widget",
        "//touchcontroller/common/layout/widget/button",
        "//touchcontroller/common/layout/widget/game",
        "//touchcontroller/common/model",
        "//touchcontroller/common/platform",
        "//touchcontroller/common/platform/android",
        "//touchcontroller/common/platform/blazesdl",
        "//touchcontroller/common/platform/capabilities",
        "//touchcontroller/common/platform/ios",
        "//touchcontroller/common/platform/provider",
        "//touchcontroller/common/platform/proxy",
        "//touchcontroller/common/platform/warning",
        "//touchcontroller/common/platform/wayland",
        "//touchcontroller/common/platform/win32",
        "//touchcontroller/common/serialization",
        "//touchcontroller/common/serializer",
        "//touchcontroller/common/state",
        "//touchcontroller/common/ui",
        "//touchcontroller/common/util/color",
        "//touchcontroller/common/util/crosshair",
        "//touchcontroller/common/util/offset",
        "//touchcontroller/common/util/registry",
        "//touchcontroller/common/util/state",
        "//touchcontroller/common/util/uuid",
    ],
)
