load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//combine:properties.bzl", "combine_version")
load("//rule:merge_library.bzl", "merge_library_jar")
load("//touchcontroller:properties.bzl", "touchcontroller_authors", "touchcontroller_contributors", "touchcontroller_description", "touchcontroller_homepage", "touchcontroller_issue_tracker", "touchcontroller_license", "touchcontroller_source", "touchcontroller_version")

expand_template(
    name = "neoforge_mod_toml",
    out = "META-INF/neoforge.mods.toml",
    substitutions = {
        "${version}": touchcontroller_version,
        "${license}": touchcontroller_license,
        "${home_page}": touchcontroller_homepage,
        "${sources_page}": touchcontroller_source,
        "${issue_tracker}": touchcontroller_issue_tracker,
        "${description}": touchcontroller_description,
        "${combine_version}": combine_version,
        "${mod_authors}": ", ".join(touchcontroller_authors),
        "${mod_contributors}": ", ".join(touchcontroller_contributors),
    },
    template = "resources/neoforge.mods.toml",
)

merge_library_jar(
    name = "neoforge_unmerged",
    aspect = True,
    aspect_class = "top.fifthlight.touchcontroller.AspectProvider",
    resources = {
        ":neoforge_mod_toml": "touchcontroller/neoforge",
    },
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//touchcontroller/common",
        "//touchcontroller/resources/texture:icon_jar",
    ],
)
