load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "widget_factory",
    srcs = glob(["*.kt"]),
    resource_strip_prefix = "combine/example/widget_factory/resources",
    resources = glob(["resources/**"]),
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//combine/theme/blackstone:blackstone_common",
        "//combine/theme/blackstone:blackstone_vanilla",
        "//combine/theme/oreui:oreui_common",
        "//combine/theme/oreui:oreui_vanilla",
    ],
    deps = [
        "//:compose",
        "//combine/backend/minecraft/game/26.2",
        "//combine/core/data",
        "//combine/core/layout",
        "//combine/core/modifier",
        "//combine/core/modifier/drawing",
        "//combine/core/modifier/placement",
        "//combine/core/modifier/scroll",
        "//combine/core/paint",
        "//combine/core/screen",
        "//combine/core/widget/layout",
        "//combine/data",
        "//combine/style",
        "//combine/theme/base",
        "//combine/theme/blackstone",
        "//combine/theme/oreui",
        "//combine/theme/vanilla",
        "//combine/widget",
        "//game/26.2:game_client_libraries",
        "@maven//:org_jetbrains_kotlinx_kotlinx_collections_immutable_jvm",
        "@maven_fabric_26_2//:com_terraformersmc_modmenu",
        "@maven_fabric_26_2//:net_fabricmc_fabric_api_fabric_api",
        "@maven_fabric_26_2//:net_fabricmc_fabric_api_fabric_key_mapping_api_v1",
        "@maven_fabric_26_2//:net_fabricmc_fabric_api_fabric_lifecycle_events_v1",
        "@maven_fabric_26_2//:net_fabricmc_fabric_loader",
    ],
)

java_binary(
    name = "dev_client",
    srcs = [],
    data = [
        "//game/26.2:game_client_assets",
        "//game/26.2:game_client_assets_version",
    ],
    env = {
        "LANG": "en_US.UTF8",
    },
    jvm_flags = [
        "-Dfabric.development=true",
        "-Ddev.launch.version=26.2-snapshot-4",
        "-Ddev.launch.type=client",
        "-Ddev.launch.assetsVersion=$(rlocationpath //game/26.2:game_client_assets_version)",
        "-Ddev.launch.mainClass=net.fabricmc.loader.impl.launch.knot.KnotClient",
        "-Xmx4G",
    ] + select({
        "@platforms//os:macos": ["-XstartOnFirstThread"],
        "//conditions:default": [],
    }),
    main_class = "top.fifthlight.fabazel.devlaunchwrapper.DevLaunchWrapper",
    runtime_deps = [
        "//game/26.2:game_client",
        "//game/26.2:game_client_libraries",
        # Classpath separator
        ":widget_factory",
        "//blazesdl/26.2:blazesdl_unmerged",
        "//combine/backend/minecraft/versions:26.2",
        "//combine/backend/minecraft/fabric/26.2",
        "//combine/backend/minecraft/fabric:meta_jar",
        "//rule/dev_launch_wrapper",
        "@maven_fabric_26_2//:io_github_llamalad7_mixinextras_fabric",
        "@maven_fabric_26_2//:net_fabricmc_fabric_language_kotlin",
        "@maven_fabric_26_2//:net_fabricmc_fabric_loader",
        "@maven_fabric_26_2//:net_fabricmc_sponge_mixin",
    ],
)
