load("//combine/theme:texture_theme.bzl", "combine_theme")

combine_theme(
    name = "oreui",
    srcs = glob(["*.kt"]),
    aspect_class = "top.fifthlight.combine.theme.oreui.AspectProvider",
    atlas_package = "top.fifthlight.combine.theme.oreui.atlas",
    mod_id = "combine-theme-oreui",
    substitutions = {
        "${mod_id}": "combine-theme-oreui",
        "${name}": "Combine Theme OreUI",
        "${description}": "OreUI theme for Combine.",
        "${name-vanilla}": "Combine Theme OreUI Vanilla",
        "${description-vanilla}": "OreUI theme for Combine. This mod contains assets for Minecraft >=1.21.2.",
        "${name-atlas}": "Combine Theme OreUI Atlas",
        "${description-atlas}": "OreUI theme for Combine. This mod contains assets for Minecraft <1.21.2.",
    },
    texture = "//combine/theme/oreui/texture",
    vanilla_package = "top.fifthlight.combine.theme.oreui.vanilla",
    visibility = ["//visibility:public"],
    deps = [
        "//combine/core/data",
        "//combine/data",
    ],
)
