load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "jij_merger_library",
    srcs = glob(["*.kt"]),
    deps = [
        "//:kotlin_serialization",
        "//rule/worker_api",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json_jvm",
    ],
)

java_binary(
    name = "jij_merger",
    jvm_flags = ["-Duser.timezone=UTC"],
    main_class = "top.fifthlight.fabazel.jijmerger.JarInJarMergerKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":jij_merger_library"],
)
